--- a/README.org
+++ b/README.org
@@ -4,3 +4,5 @@
 This repository contains [[file:k3s.org][k3s.org]], an Emacs org-mode Literate Programming guide
 for creating and maintaining a Kubernetes cluster with [[https://www.k3s.io][K3s]]. It can also be
 [[https://enigmacurry.github.io/literate-k3s/][viewed on the web in HTML format]].
+
+[[https://enigmacurry.github.io/literate-k3s/#LICENSE][The LICENSE is inside the org file]].
