--- a/k3s.org
+++ b/k3s.org
@@ -26,7 +26,14 @@ which is easy to deploy to many kinds of computer systems, be it on bare-metal,
 or virtual machine, or in the cloud. It is exceedingly useful as a *self-hosted*
 variant of Kubernetes, which you can even run on a single node with at least 2GB
 or more of RAM (4GB recommended). The cluster you'll create will be suitable for
-public web services, served through [[https://doc.traefik.io/traefik/][Traefik]] ingress, and automatic TLS.
+public web services, served through [[https://doc.traefik.io/traefik/][Traefik]] ingress, and automatic TLS. It's
+focus is on the smaller scale, a single node, using Kubernetes more as a
+packaging thing, rather than a clustering thing, but you can easily build this
+up, and get true high availability if you desire, its just not the focus of this
+presentation. If you're on the even smaller scale (less than 2GB of RAM) this
+really may not be appropriate, Kubernetes is a memory hog compared to vanilla
+Docker on these small systems (I recommend Podman with Systemd services
+instead.)
 
 This is a collection of [[https://orgmode.org][org-mode]] and [[https://orgmode.org/worg/org-contrib/babel/][org-babel]] documents. (Or if you're reading
 this online, you're probably reading the exported HTML version. You can find
