--- a/k3s.org
+++ b/k3s.org
@@ -355,7 +355,7 @@ k3sup install --host <<CLUSTER>> --user <<CLUSTER_SSH_USER>> \
  * Now test to see if you can connect and output node status:
 
  #+begin_src shell :noweb yes :eval never-export :exports both
-kubectl --kubeconfig <<KUBE_CONFIG>> get nodes
+kubectl --kubeconfig=<<KUBE_CONFIG>> get nodes
  #+end_src
 
 * Config
@@ -390,7 +390,7 @@ In [[Workstation tools][Workstation tools]] you already installed the command li
 to install it to the cluster:
 
 #+begin_src shell :noweb yes :eval never-export :exports code
-kubectl --kubeconfig <<KUBE_CONFIG>> apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/<<SEALED_SECRETS_VERSION>>/controller.yaml
+kubectl --kubeconfig=<<KUBE_CONFIG>> apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/<<SEALED_SECRETS_VERSION>>/controller.yaml
 #+end_src
 * kube-system
 =kube-system= is the namespace for running system wide features, mostly network
@@ -785,7 +785,7 @@ spec:
    deploy Traefik via kubectl:
 
    #+begin_src shell :noweb yes :eval never-export :exports both
-   kubectl --kubeconfig <<KUBE_CONFIG>> apply -k src/kube-system
+   kubectl --kubeconfig=<<KUBE_CONFIG>> apply -k src/kube-system
    #+end_src
 
  In some instances, you will need to run this command twice. If you get a
@@ -905,19 +905,19 @@ root@example.com
  echo "Generating passwords and tokens"
  POSTGRES_PASSWORD=$(openssl rand --base64 24)
  echo "Generating INTERNAL_TOKEN ..."
- INTERNAL_TOKEN=$(kubectl --kubeconfig <<KUBE_CONFIG>> \
+ INTERNAL_TOKEN=$(kubectl --kubeconfig=<<KUBE_CONFIG>> \
     run -i --quiet --rm gen-passwd-${RANDOM} \
     --image=gitea/gitea:latest --restart=Never -- \
     gitea generate secret INTERNAL_TOKEN)
  echo "Succesfully created INTERNAL_TOKEN."
  echo "Generating SECRET_KEY ..."
- SECRET_KEY=$(kubectl --kubeconfig <<KUBE_CONFIG>> \
+ SECRET_KEY=$(kubectl --kubeconfig=<<KUBE_CONFIG>> \
     run -i --quiet --rm gen-passwd-${RANDOM} \
     --image=gitea/gitea:latest --restart=Never -- \
     gitea generate secret SECRET_KEY)
  echo "Succesfully created SECRET_KEY."
  echo "Generating JWT_SECRET ..."
- JWT_SECRET=$(kubectl --kubeconfig <<KUBE_CONFIG>> \
+ JWT_SECRET=$(kubectl --kubeconfig=<<KUBE_CONFIG>> \
     run -i --quiet --rm gen-passwd-${RANDOM} \
     --image=gitea/gitea:latest --restart=Never -- \
     gitea generate secret JWT_SECRET)
@@ -958,7 +958,7 @@ root@example.com
  DEFAULT_PRIVATE = private
 
  EOF
- kubectl --kubeconfig <<KUBE_CONFIG>> \
+ kubectl --kubeconfig=<<KUBE_CONFIG>> \
     create secret generic gitea \
     --namespace git-system --dry-run=client -o json \
     --from-literal=POSTGRES_USER=$POSTGRES_USER \
@@ -1193,7 +1193,7 @@ spec:
     Tangle all the files, =C-c C-v t= then run:
 
   #+begin_src shell :noweb yes :eval never-export :exports both
-  kubectl --kubeconfig <<KUBE_CONFIG>> apply -k src/git-system
+  kubectl --kubeconfig=<<KUBE_CONFIG>> apply -k src/git-system
   #+end_src
 *** Create Admin account
 In order to login, you need to manually create the initial admin account via
@@ -1311,7 +1311,7 @@ resources:
     Tangle all the files, =C-c C-v t= then run:
 
   #+begin_src shell :noweb yes :eval never-export :exports both
-  kubectl --kubeconfig <<KUBE_CONFIG>> apply -k src/flux-system
+  kubectl --kubeconfig=<<KUBE_CONFIG>> apply -k src/flux-system
   #+end_src
 
 ** Create infrastructure repository
@@ -1386,14 +1386,14 @@ you should check the logs of these two controllers:
 Check the logs of the flux Source controller:
 
 #+begin_src shell :noweb yes :eval never-export :exports code :results output
-kubectl --kubeconfig <<KUBE_CONFIG>> -n flux-system \
+kubectl --kubeconfig=<<KUBE_CONFIG>> -n flux-system \
         logs deployment/source-controller | tail -n 10
 #+end_src
 
 Check the logs of the flux Kustomize controller:
 
 #+begin_src shell :noweb yes :eval never-export :exports code :results output
-kubectl --kubeconfig <<KUBE_CONFIG>> -n flux-system \
+kubectl --kubeconfig=<<KUBE_CONFIG>> -n flux-system \
         logs deployment/source-controller | tail -n 10
 #+end_src
 ** Test adding a new manfiest to the git repository
@@ -1433,7 +1433,7 @@ git push origin
 
 And in a little less than a minute, you should see the new namespace appear:
 #+begin_src shell :noweb yes :eval never-export :exports code
-kubectl --kubeconfig <<KUBE_CONFIG>> get ns just-a-test
+kubectl --kubeconfig=<<KUBE_CONFIG>> get ns just-a-test
 #+end_src
 
 Now delete the =just-a-test= directory and commit:
@@ -1452,7 +1452,7 @@ git push origin
 And in another minute or so, the namespace should be gone:
 
 #+begin_src shell :noweb yes :eval never-export :exports code
-kubectl --kubeconfig <<KUBE_CONFIG>> get ns just-a-test
+kubectl --kubeconfig=<<KUBE_CONFIG>> get ns just-a-test
 #+end_src
 
 * LICENSE
@@ -1509,7 +1509,6 @@ the upstream package into your Emacs environment, its just that they are not
 packaged very well, so I instead opted to copy them here.
 
 * Footnotes
-
 This should be the very last section in this document. It is excluded from the
 HTML export. This section contains code that will run when Emacs loads this
 file. When Emacs loads a file, it searches for the =Local Variables= comment at
@@ -1528,29 +1527,39 @@ Here is the startup code block that =Local Variables= references:
 Here is code to reload config.org before tangling:
 
 #+name: literate-k3s-reload-config-before-tangle
-#+begin_src elisp :exports code :eval never-export :results none
-(defun literate-k3s-reload-config ()
-  (org-babel-lob-ingest "config.org"))
-(add-hook 'after-save-hook 'literate-k3s-reload-config)
-(add-hook 'org-babel-pre-tangle-hook 'literate-k3s-reload-config)
-(literate-k3s-reload-config)
+#+begin_src elisp :noweb yes :exports code :eval never-export :results none
+  (defun literate-k3s-reload-config ()
+    (org-babel-lob-ingest "config.org"))
+  (literate-k3s-reload-config)
+  (if (boundp 'literate-k3s-watch-dirs)
+      (add-to-list 'literate-k3s-watch-dirs default-directory)
+    (setq literate-k3s-watch-dirs (list default-directory)))
+  (add-hook 'after-save-hook
+            (lambda ()
+              (when (member default-directory literate-k3s-watch-dirs)
+                (literate-k3s-reload-config)
+                )))
+  (add-hook 'org-babel-pre-tangle-hook
+            (lambda ()
+              (when (member default-directory literate-k3s-watch-dirs)
+                (literate-k3s-reload-config)
+                )))
 #+end_src
 
 Here is the code to automatically export HTML whenver this file is saved:
 
 #+name: enable-export-on-save
 #+begin_src elisp :exports code :eval never-export :results none
-  ;; Turn on automatic HTML export on save:
-  (defun toggle-org-html-export-on-save ()
-  ;;thank you aaptel : https://old.reddit.com/r/emacs/comments/4golh1/how_to_auto_export_html_when_saving_in_orgmode/d2jd88a/
-    (interactive)
-    (if (memq 'org-html-export-to-html after-save-hook)
-        (progn
-          (remove-hook 'after-save-hook 'org-html-export-to-html t)
-          (message "Disabled org html export on save for current buffer..."))
-      (add-hook 'after-save-hook 'org-html-export-to-html nil t)
-      (message "Enabled org html export on save for current buffer...")))
-  (toggle-org-html-export-on-save)
+  (setq literate-k3s-buffer-<<CLUSTER>> (current-buffer))
+  (if (boundp 'literate-k3s-watch-dirs)
+      (add-to-list 'literate-k3s-watch-dirs default-directory)
+    (setq literate-k3s-watch-dirs (list default-directory)))
+  (add-hook 'after-save-hook
+            (lambda ()
+              (when (and (member default-directory literate-k3s-watch-dirs)
+                         (eq major-mode 'org-mode))
+                (with-current-buffer literate-k3s-buffer-<<CLUSTER>>
+                  (org-html-export-to-html)))))
 #+end_src
 
 Here is a fix so that Org exports proper HTML anchors rather than the random
